Format for correct spacing and identation

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,15 @@ h1 {
   text-align: center;
   font-style: italic;
 }
-#main_paragraphs{
-    font-weight: bold;
-    margin-bottom: 0;
+#main_paragraphs {
+  font-weight: bold;
+  margin-bottom: 0;
 }
 body {
   font-family: sans-serif;
   padding: 20px;
   background-color: bisque;
+}
+.About_me {
+  border: 2px solid black;
 }
